# mcp-security

./: .agent  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING  Compare_GTI_Collection_to_IoCs_20250421_1202.mmd  Makefile  README.md  WORKFLOWS.md  docker-compose.yml  gemini-extension.json  pyproject.toml  requirements-dev.txt
.gemini/commands/: gti.toml  scc.toml  secops.toml  subagent.toml
.github/workflows/: build-and-deploy-docs.yml  check-trailing-spaces.yml  deploy-docs.yml  pr-tests.yml  publish-packages.yml  release-google-secops.yml
docs/: WORKFLOWS.md  conf.py  faq.md  google_secops_extension.md  index.md  remote_mcp_antigravity_setup.md  remote_server.md  requirements.txt  toc.md  usage_guide.md
docs/personas/: cti_researcher.md  index.md  llm_judge.md  security_engineer.md  soc_analyst_tier_1.md  soc_analyst_tier_2.md  soc_manager.md
docs/servers/: gti_mcp.md  (+3 more)
reports/: proactive_hunt_report_alienvault_63bbee81b55c8ba00724605a_20250423_1830.md
run-on-firebase-studio/: .env.example  README.md  cline_mcp_settings.json.example
run-with-google-adk/: .dockerignore  Makefile  README.md  console-mcp-agent-run.py  console-mcp-agent.py  main.py  requirements.txt
server/gti/: Dockerfile  README  README.md  pyproject.toml  setup.py
server/gti/gti_mcp/: server.py  utils.py
server/gti/gti_mcp/tools/: __init__.py  collections.py  files.py  intelligence.py  netloc.py  urls.py
server/gti/tests/: conftest.py  test_files_errors.py  test_tools.py
soc_agent/: agent.py  requirements.in  sample.env
tests/: check_imports.py  test_imports.py
(+777 files in other folders)
